[gd_scene load_steps=9 format=2]

[ext_resource path="res://grafica/ShopView/Piso.png" type="Texture" id=1]
[ext_resource path="res://grafica/ShopView/Pilares.png" type="Texture" id=2]
[ext_resource path="res://script/Inicio.gd" type="Script" id=3]
[ext_resource path="res://grafica/ShopView/SkayBg.jpg" type="Texture" id=4]
[ext_resource path="res://musicas/on_play (online-audio-converter.com).wav" type="AudioStream" id=5]
[ext_resource path="res://prefebs/Settigns.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/dirtyoldtown.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 499.0, 250.0, 766.0 ],
"_edit_vertical_guides_": [ 304.0, 516.0 ]
}

[node name="back_1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="back_2" type="TextureRect" parent="."]
anchor_right = 1.001
anchor_bottom = 1.0
margin_right = 0.279968
texture = ExtResource( 1 )
expand = true

[node name="back_3" type="TextureRect" parent="."]
anchor_right = 0.999
anchor_bottom = 1.0
margin_right = -0.280029
margin_bottom = -1.0
texture = ExtResource( 2 )
expand = true

[node name="Settigns" parent="." instance=ExtResource( 6 )]

[node name="Button" type="Button" parent="."]
anchor_left = 0.287
anchor_top = 0.511
anchor_right = 0.718
anchor_bottom = 0.607
margin_left = -0.199997
margin_top = -0.264038
margin_right = 0.199982
margin_bottom = 0.431946
custom_fonts/font = SubResource( 2 )
text = "START"

[node name="Shop" type="Button" parent="."]
anchor_left = 0.287
anchor_top = 0.707
anchor_right = 0.718
anchor_bottom = 0.804
margin_left = -0.199997
margin_top = 0.0319824
margin_right = 0.199951
margin_bottom = -0.296021
custom_fonts/font = SubResource( 2 )
text = "SHOP"

[node name="Fases" type="Button" parent="."]
anchor_left = 0.287
anchor_top = 0.304
anchor_right = 0.718
anchor_bottom = 0.4
margin_left = -0.199997
margin_top = -0.296021
margin_right = 0.199951
margin_bottom = 0.399994
custom_fonts/font = SubResource( 2 )
text = "MAP"

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Fases" to="." method="_on_Fases_pressed"]
